--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,11 +1,16 @@
-@import url(//fonts.googleapis.com/earlyaccess/nats.css);
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "NATS", sans-serif;
-  font-size: xx-large;
+  font-family: 'Noto Sans';
+  font-size: large;
+}
+
+body {
+  background-color: #212121; /* Set your desired background color here */
+  color: #ECECEC; 
 }
 
 .navbar {
@@ -22,11 +27,11 @@
   margin-left: 1rem;
   font-size: 2rem;
   background: none;
-  color: #b06b6b;
+  color: #ECECEC;
 }
 
 .nav-menu {
-  background-color: #882817;
+  background-color: #000000;
   width: 400px;
   height: 100vh;
   display: flex;
@@ -39,7 +44,7 @@
 
 .nav-menu.active {
   left: 0;
-  background-color: #882817;
+  background-color: #171717;
   transition: 450ms;
   z-index: 2;
   /* position: relative; */
@@ -56,7 +61,7 @@
 
 .nav-text a {
   text-decoration: none;
-  color: #ffffff;
+  color: #ECECEC;
   font-size: 20px;
   width: 95%;
   height: 100%;
@@ -67,8 +72,8 @@
 }
 
 .nav-text a:hover {
-  background-color: #b06b6b;
-  color: #fff;
+  background-color: rgba(34, 40, 49, 0.5);
+  color: #ECECEC;
 }
 
 .nav-menu-items {
@@ -77,8 +82,8 @@
 }
 
 .navbar-toggle {
-  background-color: #882817;
-  color: #ffffff;
+  background-color: #171717;
+  color: #ECECEC;
   width: 100%;
   height: 80px;
   display: flex;
@@ -88,4 +93,11 @@
 
 span {
   margin-left: 16px;
+}
+
+.transparent-input {
+  background-color:  rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+  width: 300px
+  /* Add any other styling for the input field */
 }
