--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
+:root {
+  --bgColorDark: #212121; 
+  --txtColorLight: #ECECEC;  
+  --txtColorDark: #212121; 
+  --componentColorDark: #171717; 
+  --hoverColor: rgba(255, 255, 255, 0.1);
+  --hoverShadowColor: rgba(0, 0, 0, 0.2); 
+  --inputColor: rgba(255, 255, 255, 0.2);
+  --buttonColor: #C0C0C2; 
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -9,16 +20,14 @@
 }
 
 body {
-  background-color: #212121; /* Set your desired background color here */
-  color: #ECECEC; 
+  background-color: var(--bgColorDark); /* Set your desired background color here */
+  color: var(--txtColorLight); 
 }
 
 .navbar {
   background: none;
   height: 75px;
   display: flex;
-  /* z-index:1; 
-  position: relative; */
   justify-content: flex-start;
   align-items: center;
 }
@@ -27,11 +36,11 @@ body {
   margin-left: 1rem;
   font-size: 2rem;
   background: none;
-  color: #ECECEC;
+  color: var(--txtColorLight);
 }
 
 .nav-menu {
-  background-color: #000000;
+  background-color: var(--bgColorDark);
   width: 400px;
   height: 100vh;
   display: flex;
@@ -44,7 +53,7 @@ body {
 
 .nav-menu.active {
   left: 0;
-  background-color: #171717;
+  background-color: var(--componentColorDark);
   transition: 450ms;
   z-index: 2;
   /* position: relative; */
@@ -61,7 +70,7 @@ body {
 
 .nav-text a {
   text-decoration: none;
-  color: #ECECEC;
+  color: var(--txtColorLight);
   font-size: 20px;
   width: 95%;
   height: 100%;
@@ -72,8 +81,8 @@ body {
 }
 
 .nav-text a:hover {
-  background-color: rgba(34, 40, 49, 0.5);
-  color: #ECECEC;
+  background-color: var(--hoverColor);
+  color: var(--txtColorLight);
 }
 
 .nav-menu-items {
@@ -82,8 +91,8 @@ body {
 }
 
 .navbar-toggle {
-  background-color: #171717;
-  color: #ECECEC;
+  background-color: var(--componentColorDark);
+  color: var(--txtColorLight);
   width: 100%;
   height: 80px;
   display: flex;
@@ -96,8 +105,31 @@ span {
 }
 
 .transparent-input {
-  background-color:  rgba(255, 255, 255, 0.2);
+  background-color:  var(--inputColor);
   border-radius: 5px;
   width: 300px
   /* Add any other styling for the input field */
+}
+
+button {
+  background-color: var(--buttonColor);
+  color: var(--txtColorDark); 
+  border-radius: 5px;
+  font-weight: 500;
+  padding: 5px 42px; 
+  outline: none; 
+  border: none;
+  margin-top: 15px;
+  box-shadow: 4px 4px var(--hoverShadowColor);  
+  cursor: pointer;
+}
+
+button:disabled {
+  cursor: not-allowed;
+}
+
+button:hover {
+  background-color: var(--hoverColor);
+  border: 1px solid var(--txtColorLight);
+  color: var(--txtColorLight);
 }
