--- a/frontend/src/styles/ProfileQuiz.css
+++ b/frontend/src/styles/ProfileQuiz.css
@@ -1,13 +1,44 @@
 .quiz-container {
-    width: 1000px;
-    background-color: rgba(255, 255, 255, 0.2);
+    justify-content: center; /* Horizontally center */
+    align-items: center; /* Vertically center */
+    width: 500px;
+    background-color: var(--inputColor);
     border-radius: 4px;
-    margin-top: 100px;
-    padding: 30px 60px;
-    box-sizing: border-box;   
+    padding: 60px 60px;
+    box-sizing: border-box; 
+    display: grid;
+    margin: 0 auto; 
+    box-shadow: 0 4px 4px var(--hoverShadowColor); 
 }
 
 .quiz-progress {
     /* font-size: 32px; */
     font-weight: 500;
+}
+
+ul {
+    margin-top: 5px;
+    /* margin-left: 40px; */
+}
+
+li {
+    text-decoration: none;
+    list-style: none;
+    border-radius: 5px;
+    font-size: 20px;
+    /* border: 1px solid;  */
+    padding: 5px; 
+    margin-top: 5px;
+    cursor: pointer; 
+}
+
+.selected-answer {
+    background-color: var(--hoverColor);
+    box-shadow: 0 2px 4px var(--hoverShadowColor);  
+}
+
+.footer {
+    margin-top: 10px;
+    display: flex;
+    justify-content: flex-end;
 }
