--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -72,11 +72,12 @@ body {
   text-decoration: none;
   color: var(--txtColorLight);
   font-size: 20px;
+  font-weight: 500;
   width: 95%;
   height: 100%;
   display:inline;
   align-items: center;
-  padding: 0 16px;
+  padding: 8 16px;
   border-radius: 5px;
 }
 
