--- a/frontend/src/styles/ProfileQuiz.css
+++ b/frontend/src/styles/ProfileQuiz.css
@@ -33,7 +33,7 @@ li {
 }
 
 .selected-answer {
-    background-color: var(--hoverColor);
+    background-color: #e6e6e6;
     box-shadow: 0 2px 4px var(--hoverShadowColor);  
 }
 
