--- a/frontend/src/styles/Lesson.css
+++ b/frontend/src/styles/Lesson.css
@@ -1,84 +1,3 @@
-
-/* .lessons-nav {
-    height: 50px;
-    background-color: var(--hoverColor);
-    padding-left: 50px; 
-    padding-right: 50px; 
-    padding-top: 10px;
-}
-
-.lessons-nav-item {
-    padding-right: 50px;
-    text-decoration: none;
-    color: inherit;
-}
-
-.lessons-nav-item:hover {
-    font-weight: bold;
-}
-
-.lessons-nav-item.active{
-    font-weight: bold;
-    text-decoration: underline;
-}
-
-.create-lesson-container {
-    width: 100%; 
-    padding: 20vh; 
-    padding-top: 10vh; 
-    display: flex;
-    flex-direction: column; 
-}
-  
-.input-label {
-    font-weight: bold;
-}
-
-.input-field { 
-    width: 100%;
-}
-
-.lesson-row {
-    position: relative;
-    margin-bottom: 10; 
-}
-
-.objectives-row { 
-    display: flex;
-    justify-content: space-between;
-}
-
-.objectives-label {
-    display: flex;
-}
-
-.add-btn {
-    margin-top: 0; 
-    margin-left: 10;
-}
-
-.remove-btn {
-    all: initial;
-    position: absolute;
-    top: 50%;
-    right: 5px;  
-    transform: translateY(-50%);
-    background: none;
-    border: none;
-    cursor: pointer;
-}
-
-.save-btn-wrapper {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    align-items: center;
-}
-
-.save-btn {
-    margin-left: 10;
-} */
-
 .lesson-div{
     justify-content: center; /* Horizontally center */
     align-items: center; /* Vertically center */
@@ -90,4 +9,17 @@
     display: grid;
     margin: 0 auto; 
     box-shadow: 0 4px 4px var(--hoverShadowColor); 
+}
+
+.lesson-title {
+    font-size: larger;
+    text-align: center;
+}
+
+.lesson-author { 
+    text-align: center;
+}
+
+.learning-objects-div {
+    margin: 5em;
 }
