--- a/frontend/src/styles/Lessons.css
+++ b/frontend/src/styles/Lessons.css
@@ -1,25 +1,21 @@
-.lesson-div-container {
+.lesson-link-div {
+    justify-content: space-evenly; /* Horizontally center */
+    align-items: center;  
+    width: 70%;
+    border-radius: 4px;
+    padding: 60px 60px;
+    box-sizing: border-box; 
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin: 20px 0;
-  }
-  
-.lesson-div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+    flex-direction: row;
+    margin: 2em auto; 
+    box-shadow: 0 4px 4px var(--hoverShadowColor); 
     text-align: center;
-    border-radius: 10px;
     text-decoration: none;
     color: var(--txtColorMedium);
 }
 
 
-.lesson-div:hover {  
+.lesson-link-div:hover {  
     color: var(--txtColorDark); 
     background-color: var(--componentColorDark);
 }
