--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -18,7 +18,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Noto Sans';
-  font-size: large;
+  font-size: medium;
 }
 
 body {
@@ -43,6 +43,7 @@ body {
 
 .nav-menu {
   background-color: var(--bgColorDark);
+  font-size: large;
   width: 400px;
   height: 100vh;
   display: flex;
