--- a/frontend/src/styles/Lesson.css
+++ b/frontend/src/styles/Lesson.css
@@ -93,3 +93,21 @@ textarea {
 .exercise-div{
     width: 100%;
 }
+
+.feedback {
+    background-color: none;
+}
+
+.correct-answer {
+    background-color: #b6dfb6;
+    box-shadow: 0 2px 4px var(--hoverShadowColor); 
+    padding: 20px; 
+    border-radius: 5px;
+}
+
+.incorrect-answer {
+    background-color: #de9797;
+    box-shadow: 0 2px 4px var(--hoverShadowColor); 
+    padding: 20px; 
+    border-radius: 5px; 
+}
