--- a/frontend/src/styles/Lesson.css
+++ b/frontend/src/styles/Lesson.css
@@ -98,16 +98,38 @@ textarea {
     background-color: none;
 }
 
-.correct-answer {
+.correct-quiz-answer {
     background-color: #b6dfb6;
     box-shadow: 0 2px 4px var(--hoverShadowColor); 
     padding: 20px; 
     border-radius: 5px;
 }
 
-.incorrect-answer {
+.incorrect-quiz-answer {
     background-color: #de9797;
     box-shadow: 0 2px 4px var(--hoverShadowColor); 
     padding: 20px; 
     border-radius: 5px; 
+}
+
+.glossary-div {
+    display: flex;
+    flex-direction: column;
+    gap: 10px; /* Adjust gap between rows */
+}
+
+.glossary-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border-bottom: 1px solid #ccc; /* Adjust as needed */
+}
+
+.glossary-term {
+    flex: 1;
+    font-weight: bold;
+}
+
+.glossary-definition {
+    flex: 2;
 }
