--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -163,3 +163,9 @@ button:hover {
 .detail {
   color: #4444449e;
 }
+
+/* .ai-icon {
+    width: 24px; 
+    height: 24px;  
+    fill: url(#bluePurpleGradient);
+} */
