--- a/frontend/src/styles/Lesson.css
+++ b/frontend/src/styles/Lesson.css
@@ -133,3 +133,14 @@ textarea {
 .glossary-definition {
     flex: 2;
 }
+
+
+.toggle-button {
+    box-shadow: none; 
+}
+
+.flashcard {
+    font-size: large;
+    align-items: center;
+    display: flex;
+}
