--- a/frontend/src/styles/Lesson.css
+++ b/frontend/src/styles/Lesson.css
@@ -144,3 +144,21 @@ textarea {
     align-items: center;
     display: flex;
 }
+
+.slide-footer {
+    width: 100%;
+    display: flex;
+    /* justify-content: flex-end;  */
+}
+
+.slide-button {
+    background-color: var(--bgColorDark);
+    border: none;
+    width: 100%;
+    /* border-radius: 0px;  */
+    padding: 10px 5px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 500;
+    box-shadow: none; 
+}
