--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -11,6 +11,7 @@
   --sidebarHoverColor: #e6e6e6; 
   --inputColor: rgba(255, 251, 251, 0.283);
   --buttonColor: #f0f0f0; 
+  --hoverColorLight: #bebbbb;
 }
 
 * {
