--- a/frontend/src/styles/Quiz.css
+++ b/frontend/src/styles/Quiz.css
@@ -29,12 +29,12 @@
     font-weight: 500;
 }
 
-.mcq-div {
-    /* width: 100%; */
+/* .mcq-div {
+    /* width: 100%;  
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+} */
 
 ul {
     margin-top: 5px;
