--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -56,6 +56,7 @@
     font-weight: 400;
     padding: 10px;
     box-sizing: border-box;
+    margin-bottom: 20px;
 }
 
 .transparent-input::placeholder {
@@ -92,6 +93,7 @@ button:hover {
     color: red;
     font-weight: bold;
     margin-bottom: 10px;
+    font-family: 'Lusitana', serif;
 }
 
 .offscreen {
