--- a/frontend/src/styles/SignUp.css
+++ b/frontend/src/styles/SignUp.css
@@ -1,21 +1,54 @@
-.container {
+.signup-container {
+    width: 100%;
+    height: 90%;
+    position: relative;
+    background: #FFFAF8;
+    padding-top: 20px;
+    padding-bottom: 30px;
     display: flex;
-    justify-content: center; /* Horizontally center the content */
-    align-items: center; /* Vertically center the content */
-    height: 90vh; /* Full height of the viewport */
-}
-  
-.input-container {
-    display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: flex-end;
+}
+
+.signup-container section {
+    text-align: center;
+    color: #3E3E3E;
+    font-size: 35px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    word-wrap: break-word;
+}
+
+.signup-container form {
+    position: relative;
+    margin-top: 20px;
+}
+
+.signup-container h1 {
+    color: #3E3E3E;
+    font-size: 35px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    word-wrap: break-word;
+}
+
+.signup-container label {
+    display: block;
+    color: #3E3E3E;
+    font-size: 20px;
+    font-family: 'Lusitana', serif;
+    font-weight: 400;
+    margin-bottom: 10px;
+    text-align: left;
 }
 
 .instructions {
     font-size: 0.75rem;
     border-radius: 0.5rem;
     background: var(--hoverColor);
-    color: #fff;
+    border: 1px solid var(--borderColor);
+    font-family: 'Montserrat', sans-serif;
+    /* color: #fff; */
     padding: 0.25rem;
     position: relative;
     bottom: -10px;
@@ -48,10 +81,15 @@
     background-color: lightpink;
     color: firebrick;
     font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
     padding: 0.5rem;
     margin-bottom: 0.5rem;
 }
 
-.line {
-    display: inline-block;
+.login-link {
+    color: #3E3E3E;
+    font-size: 21.6px;
+    font-family: 'Lusitana', serif;
+    font-weight: 400;
+    text-decoration: underline;
 }
