--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -18,8 +18,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Noto Sans';
-  font-size: medium;
+  font-family: 'Lusitana', serif;
+  font-size: 20px;
 }
 
 body {
