--- a/frontend/src/styles/Embed.css
+++ b/frontend/src/styles/Embed.css
@@ -5,7 +5,7 @@
     padding-bottom: 40px;
     padding-left: 30px;
     padding-right: 29px;
-    background: #a7d9ff;
+    background: #c3e3fb;
     border-radius: 15px;
     overflow: hidden;
     border: 2px #164f72 solid;
