--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -57,6 +57,7 @@
     padding: 10px;
     box-sizing: border-box;
     margin-bottom: 20px;
+    padding-left: 25px;
 }
 
 .transparent-input::placeholder {
