--- a/frontend/src/styles/Slide.css
+++ b/frontend/src/styles/Slide.css
@@ -1,4 +1,4 @@
-.lecture-div {
+.slide-div {
     width: 100%;
     height: 100%;
     padding-top: 25px;
@@ -16,25 +16,24 @@
     display: inline-flex;
 }
 
-.lecture-header{
+.slide-header {
     width: 100%;
     display: flex;
     justify-content: flex-end;
 }
 
-.lecture-toggle {
+.slide-toggle {
     position: relative;
     display: inline-block;
     border: 1px solid #C2DD00;
     border-radius: 10px;
     height: 40px;
+    width: 120px;
 }
 
-.lecture-button {
+.slide-button {
     height: 100%;
-    position: relative;
-    font-size: 24px; /* Adjust icon size */
-    padding: 5px 20px; /* Adjust padding */
+    padding: 5px 0px; /* Adjust padding */
     border: 1px solid #C2DD00; /* Adjust border style */
     border-radius: 8px; /* Adjust border radius */
     background-color: #F9FFCD; /* Default background */
@@ -42,24 +41,27 @@
     cursor: pointer;
     box-shadow: none;
     margin-top: 0;
+    position: absolute;
+    width: 65px;
 }
 
-.lecture-button:hover {
+
+.slide-button:nth-child(2) {
+    left: 55px;
+}
+
+.slide-button:hover {
     background-color: #C2DD00; /* Hover background */
     color: #F9FFCD; /* Hover text */
 }
 
-.lecture-button.active {
+.slide-button.active {
     background-color: #C2DD00; /* Change color when pressed */
     color: #F9FFCD; /* Change text color when pressed */
 }
 
-.lecture-button + .lecture-button {
-    margin-left: -10px; /* Adjust this value to control overlap */
-}
 
-
-.lecture-title-container {
+.slide-title-container {
     margin-top: 20px;
     width: 100%;
     display: flex;
@@ -67,14 +69,14 @@
     align-items: flex-start;
 }
 
-.lecture-icon{
+.slide-icon{
     color: #C2DD00;
     width: 30px;
     height: 30px;
     position: relative;
 }
 
-.lecture-title {
+.slide-title {
     color: #C2DD00;
     font-size: 25px;
     font-family: 'Montserrat', sans-serif;
@@ -82,13 +84,14 @@
     word-wrap: break-word;
 }
 
-.lecture-embed-frame {
+.slide-image {
     width: 100%;
     max-width: 500px;
     height: 315px;
     border-radius: 5px;
     border: none;
     align-items: center;
+    justify-content: center;
 }
 
 .narrative-text {
