--- a/frontend/src/styles/NarrativeText.css
+++ b/frontend/src/styles/NarrativeText.css
@@ -70,3 +70,57 @@
     background: #FFF1CD;
     border: none;
 }
+
+.media-header {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.media-toggle {
+    position: relative;
+    display: inline-block;
+    border: 1px solid #FFB800;
+    border-radius: 10px;
+    height: 40px;
+    width: 120px;
+}
+
+.media-button {
+    height: 100%;
+    padding: 5px 0px;  
+    border: 1px solid #FFB800;  
+    border-radius: 8px;  
+    background-color: #F9FFCD;  
+    color: #FFB800;
+    cursor: pointer;
+    box-shadow: none;
+    margin-top: 0;
+    position: absolute;
+    width: 65px;
+}
+
+
+.media-button:nth-child(2) {
+    left: 55px;
+}
+
+.media-button:hover {
+    background-color: #FFB800;  
+    color: #FFF1CD;  
+}
+
+.media-button.active {
+    background-color: #FFB800;   
+    color: #FFF1CD;  
+}
+
+.media-content {
+    width: 100%;
+    max-width: 500px;
+    height: 315px;
+    border-radius: 5px;
+    border: none;
+    align-items: center;
+    justify-content: center;
+}
