--- a/frontend/src/styles/Slide.css
+++ b/frontend/src/styles/Slide.css
@@ -33,10 +33,10 @@
 
 .slide-button {
     height: 100%;
-    padding: 5px 0px; /* Adjust padding */
-    border: 1px solid #C2DD00; /* Adjust border style */
-    border-radius: 8px; /* Adjust border radius */
-    background-color: #F9FFCD; /* Default background */
+    padding: 5px 0px;  
+    border: 1px solid #C2DD00; 
+    border-radius: 8px;  
+    background-color: #F9FFCD;  
     color: #C2DD00;
     cursor: pointer;
     box-shadow: none;
