--- a/frontend/src/styles/SignUp.css
+++ b/frontend/src/styles/SignUp.css
@@ -1,3 +1,15 @@
+.signup-success {
+    width: 100%;
+    height: 90%;
+    position: relative;
+    text-align: center;
+    color: #3E3E3E;
+    font-size: 35px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    word-wrap: break-word;
+}
+
 .signup-container {
     width: 100%;
     height: 90%;
