--- a/frontend/src/styles/McqQuiz.css
+++ b/frontend/src/styles/McqQuiz.css
@@ -67,7 +67,7 @@
 
 .mcq-quiz-container h3 {
     font-family: 'IBM Plex Mono', monospace;
-    font-size: 15px;
+    font-size: 16px;
 }
 
 .mcq-quiz-container ul {
@@ -76,7 +76,7 @@
 
 .mcq-quiz-container li {
     font-family: 'IBM Plex Mono', monospace;
-    font-size: 15px;
+    font-size: 16px;
     text-decoration: none;
     list-style: none;
     border-radius: 5px;
@@ -93,18 +93,46 @@
 
 .mcq-quiz-section {
     box-shadow: 0 0 0 0;
-    border: 1px solid #3E3E3E;
-    width: 50%;
-    display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
     background-color: var(--inputColor);
     border-radius: 4px;
-    padding: 60px 60px;
     box-sizing: border-box; 
     display: grid;
     margin: 10px; 
-    /* box-shadow: 4px 4px 4px 4px var(--hoverShadowColor);  */
     transition: opacity 0.5s ease;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.mcq-quiz-section ol li {
+    font-family: 'IBM Plex Mono', monospace;
+    text-transform: lowercase; 
+}
+
+
+.selected-mcq-answer {
+    border: 1px #000 solid;
+    background-color: #e6e6e6; 
+    padding: 10px;
+}
+
+/* .unselected-mcq-answer { */
+    /* background-color: #FFF1CD;  */
+    /* border: 1px #FFB800 solid;  */
+/* } */
+
+.correct-mcq-answer {
+    background-color: #e6f9d8;
+    border: 1px #cdefcd solid;
+    box-shadow: 0 2px 4px var(--hoverShadowColor); 
+    padding: 10px; 
+}
+
+.incorrect-mcq-answer {
+    background-color: #fde0e0;
+    border: 1px #de9797 solid;
+    box-shadow: 0 2px 4px var(--hoverShadowColor);  
+    padding: 10px;
 }
