style mcq + exercise

--- a/frontend/src/styles/Exercise.css
+++ b/frontend/src/styles/Exercise.css
@@ -1,7 +1,7 @@
 .exercise-div {
     width: 100%;
     height: 100%;
-    padding-top: 25px;
+    /* padding-top: 25px; */
     padding-bottom: 40px;
     padding-left: 30px;
     padding-right: 29px;
@@ -14,6 +14,7 @@
     gap: 10px;
     display: inline-flex;
 }
+
 
 .exercise-header {
     margin-top: 50px;
@@ -51,3 +52,76 @@
     word-wrap: break-word;
 }
 
+.exercise-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.exercise-section h2 {
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 16px;
+    /* padding-left: 30px;
+    padding-right: 30px; */
+    margin-bottom: 20px;
+}
+
+.answer-text-container {
+    width: 100%;
+}
+
+.answer-text-area {
+    width: 100%;
+    /* height: 100px; */
+    padding: 20px;
+    /* font-family: 'IBM Plex Mono', monospace; */
+    font-size: 18px;
+    border-radius: 10px;
+    border: 1px #CECECE solid;
+}
+
+.correct-text-area {
+    background-color: #C2DD00;
+}
+
+.incorrect-text-area {
+    background-color: #ef9797;
+}
+
+.correct-quiz-answer {
+    color: #C2DD00;
+    /* box-shadow: 0 2px 4px var(--hoverShadowColor);  */
+    padding: 20px; 
+    /* border-radius: 5px; */
+}
+
+.incorrect-quiz-answer {
+    color: #c25454;
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 16px;
+    /* box-shadow: 0 2px 4px var(--hoverShadowColor);  */
+    padding: 20px; 
+    /* border-radius: 5px;  */
+}
+
+.results-container {
+    width: 100%;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    color: #3E3E3E;
+    font-family: 'IBM Plex Mono';
+}
+
+.exercise-score {
+    color: #3E3E3E;
+    font-size: 96px;
+    font-family: 'IBM Plex Mono';
+    font-weight: 400;
+    /* word-wrap: break-word; */
+}
