--- a/frontend/src/styles/Challenge.css
+++ b/frontend/src/styles/Challenge.css
@@ -23,13 +23,14 @@
     justify-content: flex-start;
     align-items: flex-start;
     gap: 14px;
+    color: #9747FF;
 }
 
 .challenge-icon {
     width: 25px;
     height: 25px;
     position: relative;
-    color: #000;
+    color: #9747FF;
 }
 
 .challenge-title {
@@ -52,9 +53,19 @@
 .challenge-section {
     /* border: 2px #9747FF solid; */
     border-radius: 10px;
-    background: #e3d2fc;
-    /* width: 50%; */
+    /* background: #e3d2fc; */
+    width: 100%;
     padding: 10px;
+    font-size: 16px;
+    font-family: 'IBM Plex Mono', monospace;
+}
+
+.challenge-choices {
+    /* border: 2px #9747FF solid; */
+    border-radius: 10px;
+    background: #e3d2fc;
+    width: 50%;
+    padding: 15px;    
 }
 
 .answer-text-container {
@@ -69,4 +80,23 @@
     font-size: 18px;
     border-radius: 10px;
     border: 1px #CECECE solid;
+}
+
+
+.ai-options {
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    /* text-align: center; */
+    width: 100%; /* Adjust as needed */
+    margin: 20px auto; /* Center horizontally by auto margins */
+    border: 1px #c8c7c7 solid;
+    border-radius: 10px;
+    padding-left: 30px;
+    padding-right: 29px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    /* padding-bottom: 20px; */
+    gap: 20px;
+    background-color: #f9f5f5;
 }
