--- a/frontend/src/styles/Challenge.css
+++ b/frontend/src/styles/Challenge.css
@@ -98,5 +98,11 @@
     padding-bottom: 10px;
     /* padding-bottom: 20px; */
     gap: 20px;
-    background-color: #f9f5f5;
+    background-color: #FFFAF8;
+
+}
+
+.ai-options-text {
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 16px;
 }
