--- a/frontend/src/styles/Lesson.css
+++ b/frontend/src/styles/Lesson.css
@@ -44,7 +44,7 @@
     padding: 30px;
     /* padding-bottom: 20px; */
     gap: 20px;
-    background-color: #eeeeee;
+    /* background-color: #eeeeee; */
 }
 
 .lightbulb {
@@ -58,7 +58,8 @@
     /* margin-top: 20px; */
     color: #3E3E3E;
     font-size: 16px;
-    font-family: 'Montserrat', sans-serif;
+    /* font-family: 'Montserrat', sans-serif; */
+    font-family: 'IBM Plex Mono', monospace;
     font-weight: 400;
 }
 
