--- a/frontend/src/styles/Slide.css
+++ b/frontend/src/styles/Slide.css
@@ -94,11 +94,11 @@
     justify-content: center;
 }
 
-.narrative-text {
+.narrative-text-slide {
     /* width: 885px; */
     color: #3E3E3E;
-    font-size: 20px;
-    font-family: 'Lusitana', serif;
+    font-size: 16px;
+    font-family: 'IBM Plex Mono', monospace;
     font-weight: 400;
     word-wrap: break-word;
 }
