--- a/frontend/src/styles/Challenge.css
+++ b/frontend/src/styles/Challenge.css
@@ -56,6 +56,9 @@
     /* background: #e3d2fc; */
     width: 100%;
     padding: 10px;
+}
+
+.challenge-section p {
     font-size: 16px;
     font-family: 'IBM Plex Mono', monospace;
 }
@@ -66,6 +69,11 @@
     background: #e3d2fc;
     width: 50%;
     padding: 15px;    
+}
+
+.challenge-choices p {
+    font-size: 16px;
+    font-family: 'IBM Plex Mono', monospace;
 }
 
 .answer-text-container {
