--- a/frontend/src/styles/UploadLesson.css
+++ b/frontend/src/styles/UploadLesson.css
@@ -22,7 +22,7 @@
     margin-top: 30px;
 }
 
-.lesson-title-input {
+.lo-input {
     width: 60%;
     padding: 10px;
     font-size: 15px;
@@ -30,22 +30,53 @@
     border-radius: 5px;
 }
 
-.lesson-description-input{
+.lo-textarea {
     padding: 10px;
-}
-
-.lesson-thumbnail-input {
-    width: 60%;
-    padding: 10px;
-    font-size: 15px;
-    border: #d3d3d3 1px solid;
-    border-radius: 5px;
 }
 
 .lesson-upload-button-container {
-    width: 40%;
-    margin-left: 30%; 
+    width: 80%;
+    margin-left: 10%; 
     justify-content: center;
     display: flex;
     margin-top: 50px;
+    gap: 20px;
+}
+
+.lo-upload-div {
+    margin-top: 30px;
+    border: 2px solid #9a9a9a;
+    border-radius: 10px;
+    width: 80%;
+    /* align-items: center; */
+    /* justify-content: center; */
+    margin-left: 10%;
+    height: fit-content;
+    padding: 40px;
+}
+
+.lo-upload-div label {
+    margin-top: 20px;
+    font-size: 18px;
+    display: block;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: normal;
+    color: #3e3e3e;
+}
+
+
+.lo-upload-container {
+    width: 60%;
+}
+
+.lo-narrative-textarea {
+    width: 100%;
+    /* padding: 10px; */
+    font-size: 15px;
+    border: #d3d3d3 1px solid;
+    border-radius: 5px;
+}
+
+.lo-link-upload {
+    width: 100%;
 }
